--- a/CovGym/CovGym/Properties/Resources.resx
+++ b/CovGym/CovGym/Properties/Resources.resx
@@ -133,15 +133,6 @@
   <data name="btnaceptar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnaceptar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="314549__gray-lines-background_p" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\314549__gray-lines-background_p.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="fondos10.net-3d-1288" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\fondos10.net-3d-1288.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="1402823911_126577" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1402823911_126577.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -159,5 +150,20 @@
   </data>
   <data name="1402823985_search" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1402823985_search.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="botton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\botton.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="camara_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\camara_5.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="entrada" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\entrada.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="error" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\error.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="valido" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\valido.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
