--- a/CovGym/CovGym/frmClientes.resx
+++ b/CovGym/CovGym/frmClientes.resx
@@ -149,6 +149,9 @@
         87CFXEUqWI2oAdIKPR0agF4Oum2KNrWHqNsIyUfp1jACa7dAVaoCWGKg8EAFuWjcX3haFf/Z
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIADuDgAAZgAAABoaAAABACAAIAsAAFQPAAAwMAAAAQAgAKglAAB0GgAAICAAAAEA
